--- a/l2/l2.md
+++ b/l2/l2.md
@@ -1,6 +1,6 @@
 ```
 已知某给定值w和某给定值n
-存在N个f(x,n) = ax^3 + bx^2 + cx + d
+存在N个f(x,n)  ax^2 + by^2  = c
 在f(w*(n-1),n)=0xffffffff
 某函数f(x)中未知数x的定义域为[0,w*(n-1)]
 值域为：[0x551e1e1e,0xffffffff]
